--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 
-
 <script src="bower_components/angular-filters/dist/angular-filters.min.js" ></script>
 <!-- using bower for routing -->
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -37,9 +36,12 @@
 
 <!-- service to read Json file -->
 <script src="service/ReadCardDetails.js"></script>
+
 <!-- directives for sidebar and navbar -->
 <script src="directives/navbar.js"></script>
 <script src="directives/sidebar.js"></script>
+
+<script src="filter/myfilter.js" charset="utf-8"></script>
 
 
 <div ui-view>
