angular task commited

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script src="directives/navbar.js"></script>
 <script src="directives/sidebar.js"></script>
 
+<!-- creating filter to  remove the duplicates -->
 <script src="filter/myfilter.js" charset="utf-8"></script>
 
 
