front end completing

--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>FundooApp</title>
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <!-- defining angularApp -->
@@ -29,21 +30,13 @@
 <!-- controllers  -->
 
 
-<script src="controller/registerController.js"></script>
-<script src="controller/LoginController.js"></script>
-<script src="controller/forgotController.js"></script>
+<script src="controller/userController.js"></script>
 
-<!-- service to read Json file -->
-<!-- <script src="service/ReadCardDetails.js"></script> -->
+<!-- service -->
+<script src="service/userservice.js"></script>
 
-<!-- directives for sidebar and navbar -->
-<!-- <script src="directives/navbar.js"></script>
-<script src="directives/sidebar.js"></script> -->
-
-<!-- creating filter to  remove the duplicates -->
-<!-- <script src="filter/myfilter.js" charset="utf-8"></script> -->
-
-
+<!-- directive -->
+<script src="directives/navbar.js"></script>
 <div ui-view>
 </div>
 
