--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -31,12 +31,16 @@
 
 
 <script src="controller/userController.js"></script>
+<script src="controller/homeController.js"></script>
+<script src="controller/noteController.js"></script>
 
 <!-- service -->
 <script src="service/userservice.js"></script>
 
 <!-- directive -->
 <script src="directives/navbar.js"></script>
+<script src="directives/sidebar.js"></script>
+
 <div ui-view>
 </div>
 
