--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -1,7 +1,4 @@
-
-<!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>FundooApp</title>
@@ -21,6 +18,7 @@
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
+<!-- <script src="bower_components/ngSanitize" charset="utf-8"></script> -->
 
 <script src="bower_components/angular-filters/dist/angular-filters.min.js" ></script>
 <!-- using bower for routing -->
@@ -36,6 +34,7 @@
 
 <!-- service -->
 <script src="service/userservice.js"></script>
+<script src="service/noteservice.js"></script>
 
 <!-- directive -->
 <script src="directives/navbar.js"></script>
