--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -19,6 +19,7 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 <!-- <script src="bower_components/ngSanitize" charset="utf-8"></script> -->
+<script src="bower_components/ng-content-editable/dist/ng-content-editable.min.js" charset="utf-8"></script>
 
 <script src="bower_components/angular-filters/dist/angular-filters.min.js" ></script>
 <!-- using bower for routing -->
@@ -40,6 +41,7 @@
 <script src="directives/navbar.js"></script>
 <script src="directives/sidebar.js"></script>
 <script src="directives/icon.js" charset="utf-8"></script>
+<script src="directives/contentEdit.js" charset="utf-8"></script>
 <div ui-view>
 </div>
 
