--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -12,8 +12,7 @@
 </body>
 
 <!-- using bower_components -->
-<script src="bower_components/angular/angular.min.js">
-</script>
+<script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
@@ -26,6 +25,7 @@
 <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="app.js" charset="utf-8"></script>
 
+<script src="bower_components/angular-sanitize/angular-sanitize.min.js" charset="utf-8"></script>
 <!-- controllers  -->
 
 
