--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="css/styl.css">
 </head>
 <!-- defining angularApp -->
 
