--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -39,13 +39,13 @@
 <!-- service -->
 <script src="service/userservice.js"></script>
 <script src="service/noteservice.js"></script>
-<script src="" charset="utf-8"></script>
+
 
 <!-- directive -->
 <script src="directives/navbar.js"></script>
 <script src="directives/sidebar.js"></script>
 <script src="directives/icon.js" charset="utf-8"></script>
-
+<script src="directives/unarchivicon.js"></script>
 
 <div ui-view>
 </div>
