update for image

--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -46,6 +46,7 @@
 <script src="directives/sidebar.js"></script>
 <script src="directives/icon.js" charset="utf-8"></script>
 <script src="directives/unarchivicon.js"></script>
+<script src="directives/contenteditable.js" charset="utf-8"></script>
 
 <div ui-view>
 </div>
