--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -28,6 +28,9 @@
 <script src="app.js" charset="utf-8"></script>
 
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js" charset="utf-8"></script>
+
+<script src="bower_components/ng-file-upload/ng-file-upload.min.js" charset="utf-8"></script>
+
 <!-- controllers  -->
 
 
