--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -19,8 +19,8 @@
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-<!-- <script src="bower_components/ngSanitize" charset="utf-8"></script> -->
-<script src="bower_components/ng-content-editable/dist/ng-content-editable.min.js" charset="utf-8"></script>
+
+<!-- <script src="bower_components/ng-content-editable/dist/ng-content-editable.min.js" charset="utf-8"></script> -->
 
 <script src="bower_components/angular-filters/dist/angular-filters.min.js" ></script>
 <!-- using bower for routing -->
