--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="css/styl.css">
+<link rel="stylesheet" href="bower_components/ng-img-crop/compile/unminified/ng-img-crop.css">
 </head>
 <!-- defining angularApp -->
 
@@ -30,6 +31,9 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js" charset="utf-8"></script>
 
 <script src="bower_components/ng-file-upload/ng-file-upload.min.js" charset="utf-8"></script>
+
+<script src="bower_components/ng-img-crop/compile/unminified/ng-img-crop.js" charset="utf-8"></script>
+
 
 <!-- controllers  -->
 
