commit changes from label dialog to panel

--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -21,7 +21,7 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 
-<!-- <script src="bower_components/ng-content-editable/dist/ng-content-editable.min.js" charset="utf-8"></script> -->
+<script src="bower_components/ng-content-editable/dist/ng-content-editable.min.js" charset="utf-8"></script>
 
 <script src="bower_components/angular-filters/dist/angular-filters.min.js" ></script>
 <!-- using bower for routing -->
@@ -53,7 +53,7 @@
 <script src="directives/sidebar.js"></script>
 <script src="directives/icon.js" charset="utf-8"></script>
 <script src="directives/unarchivicon.js"></script>
-<script src="directives/contenteditable.js" charset="utf-8"></script>
+<!-- <script src="directives/contenteditable.js" charset="utf-8"></script> -->
 
 <div ui-view>
 </div>
