--- a/fundooApp/index.html
+++ b/fundooApp/index.html
@@ -56,6 +56,9 @@
 <script src="directives/urlimage.js" charset="utf-8"></script>
 <!-- <script src="directives/contenteditable.js" charset="utf-8"></script> -->
 
+
+<!-- filter -->
+<script src="filter/myfilter.js" charset="utf-8"></script>
 <div ui-view>
 </div>
 
